<resources>
    <string name="app_name">MBMobileSDK Sample</string>
    <string name="model_entry">Model:</string>
    <string name="vin_entry">VIN:</string>
    <string name="fuel_entry">Fuel Type:</string>
    <string name="select_vehicle_text">Select a vehicle</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in">Logged in</string>
    <string name="selected_vehicle">Selected Vehicle Status:</string>
    <string name="selected_vehicle_fin">Current Vehicle Fin:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="vehicle_commands_entry">Vehicle Commands:</string>
    <string name="unlock_doors">Unlock doors</string>
    <string name="lock_doors">Lock doors</string>
    <string name="unknown">UNKNOWN</string>
    <string name="open_windows">Open Windows</string>
    <string name="close_windows">Close Windows</string>
    <string name="tank_rank_in_km">Tank Range in km:</string>
    <string name="gas_range">Gas Range</string>
    <string name="liquid_range">Liquid Range</string>
    <string name="electric_range">Electric Range</string>
    <string name="username">Username</string>
    <string name="request_pin">Request Pin</string>
    <string name="pin">Pin</string>
    <string name="fetch_vehicle">Fetch Vehicle</string>
    <string name="select_first_car">select first car</string>
    <string name="car_commands">Car Commands</string>
    <string name="door">Door -</string>
    <string name="connecting_text">Connecting …</string>
    <string name="disconnecting_text">Disconnecting …</string>
    <string name="unlocking_text">Unlocking …</string>
    <string name="locking_text">Locking …</string>
    <string name="opening_text">Opening …</string>
    <string name="closing_text">Closing …</string>
    <string name="default_text">---</string>
    <string name="roof_type">Roof Type:</string>
    <string name="login_text">Login Status:</string>
    <string name="doors_text">Doors Status:</string>
    <string name="windows_text">Windows Status:</string>
    <string name="no_vehicle_selected_image_placeholder">No Vehicle selected</string>
    <string name="phone_or_mail">Phone number or mail address</string>
    <string name="send_tan">Send TAN</string>
    <string name="confirm_tan">Confirm</string>
    <string name="enter_tan">Enter the TAN we sent to %s.</string>
    <string name="tan">TAN</string>
    <string name="error_not_registered">User %s is not registered.</string>
    <string name="error_general">Something went wrong.</string>
    <string name="ok">OK</string>
    <string name="vehicle_status_dump">Vehicle Status Diff:</string>
    <string name="pin_popup_send">Send</string>
    <string name="pin_popup_title">PIN entry</string>
    <string name="pin_popup_wrong_pin_msg">The PIN is incorrect. Please try again.</string>
    <string name="pin_popup_wrong_pin_title">Incorrect PIN</string>
    <string name="pin_popup_description">Please enter your %1$d-digit PIN:</string>
    <string name="pin_popup_cancel">Cancel</string>
    <string name="pin_popup_no_pin_message">You have not yet created a PIN</string>
    <string name="pin_popup_user_blocked_message">You have entered your PIN incorrectly %1$d times. Your Mercedes me ID has therefore been blocked for %2$s.</string>
    <plurals name="pin_popup_user_blocked_message_minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <string name="general_ok">OK</string>
    <string name="general_error">Error</string>
    <string name="send_to_car">Send to Car</string>
    <string name="send_poi_to_car">Send POI to Car</string>
    <string name="s2c_error_token_refresh">Failed: User token could not be refreshed.</string>
    <string name="s2c_vehicle_not_supported">Failed: This vehicle does not support sending POI via Backend.</string>
    <string name="s2c_preconditions_missing">Failed: Not all preconditions are met.</string>
    <string name="s2c_failed_unknown">Failed: Due to an unknown reason.</string>
    <string name="s2c_poi_successfully_sent">POI successfully sent to car.</string>
</resources>
