<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.daimler.mbmobilesdk.example.dialogs.pin.PinInputDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/mb_mobile_sdk_dialog_min_width">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mb_mobile_sdk_margin_default"
            android:gravity="center"
            android:text="@string/pin_popup_title"
            android:textSize="@dimen/mb_mobile_sdk_text_size_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mb_mobile_sdk_margin_default"
            android:gravity="center"
            android:text="@{@string/pin_popup_description(model.PIN_LENGTH)}"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/pin_popup_description" />

        <EditText
            android:id="@+id/edit_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mb_mobile_sdk_margin_default"
            android:inputType="numberDecimal"
            android:text="@={model.pin}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mb_mobile_sdk_margin_default"
            android:enabled="@{safeUnbox(model.confirmEnabled)}"
            android:onClick="@{() -> model.onConfirmClicked()}"
            android:text="@string/pin_popup_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_pin" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mb_mobile_sdk_margin_default"
            android:onClick="@{() -> model.onCancelClicked()}"
            android:text="@string/pin_popup_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/edit_pin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>